--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ This fork adds a quite a bunch of features, among which a menu overflow button, 
 <li>Tap IMDb rating to view in IMDb App when installed, or on IMDb's mobile webpage</li>
 </ul>
 
-<p><a href="http://gallery.asymmetrics.nl/index.php?sfpg=RHJvaWRTZXJpZXMvKioxZTNiOGI1MjAwYzk0ZTE4OTVmZTRmYWIxOTBjNDAyYQ">Screenshots &amp; comparison with original DroidSeries</a><br>
+<p><a href="https://github.com/ltGuillaume/DroidShows/wiki">DroidShows Wiki (FAQ)</a><br>
+<a href="http://gallery.asymmetrics.nl/index.php?sfpg=RHJvaWRTZXJpZXMvKioxZTNiOGI1MjAwYzk0ZTE4OTVmZTRmYWIxOTBjNDAyYQ">Screenshots &amp; comparison with original DroidSeries</a><br>
 <a href="http://forum.xda-developers.com/showthread.php?p=58437755#post58437755">XDA Forum post (in original DroidSeries thread)</a><br>
 <strong>Download APK</strong>: from XDA forum post or <a href="https://github.com/ltGuillaume/DroidShows/tree/master/apk">here</a></p>
 
