Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ This fork adds a quite a bunch of features, among which a menu overflow button, 
 + Icon ic_menu_add for new shows<br>
 * Fixed search not working after initial search<br>
 * Centered icons vertically in search results<br>
-- No large-size posters are saved to save space in /data/data/  </p>
+* Large-size posters aren't cached, to save space in /data/data/  </p>
 
 <p><strong>Update</strong>:<br>
 * Prevent double episodes  </p>
@@ -97,9 +97,7 @@ This fork adds a quite a bunch of features, among which a menu overflow button, 
 * Screen off/rotating screen/navigating away from app during update kinda OK now<br>
 * [Exit] removes app from memory<br>
 * Fixed UI glitches/styles<br>
-* Code clean-up (all layouts revised)<br>
-- Removed useless dependencies<br>
-- Removed crappy features  </p>
+* Code clean-up (all layouts revised)  </p>
 
 <p>©2010 <a href="http://code.google.com/p/droidseries">Carlos Limpinho, Paulo Cabido</a> under GPLv3<br>
 Modified by <a href="http://gitorious.org/droidseries/mckaels-droidseries">Mikael Berthe</a><br>
