Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@ This fork adds a quite a bunch of features, among which a menu overflow button, 
 <li>Don't forget to update all shows regularly</li>
 <li>Long-press items for more options</li>
 <li>Swipe left-to-right to go back<br>
-<em>In Shows Overview</em>:</li>
+<strong>In Shows Overview</strong>:</li>
 <li>Tap poster for show info</li>
 <li>Long-press poster for next episode's IMDb</li>
 <li>Swipe right-to-left to mark next as seen<br>
-<em>In Show Details</em>:</li>
+<strong>In Show Details</strong>:</li>
 <li>Tap poster for full-screen view</li>
 <li>Click full-screen poster image for fan art<br>
-<em>In Show/Episode Details</em>:</li>
+<strong>In Show/Episode Details</strong>:</li>
 <li>Tap IMDb rating to view in IMDb App when installed, or on IMDb's mobile webpage</li>
 </ul>
 
