--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 <a id="droidshows" class="anchor" href="#droidshows" aria-hidden="true"><span class="octicon octicon-link"></span></a>DroidShows<img src="https://github.com/ltGuillaume/DroidShows/raw/master/icon/icon5a.png" align="right">
 </h1>
 
-<p>DroidShows: a 2015 reboot of DroidSeries TV Show Tracker<br>
-This fork adds a quite a bunch of features, among which a menu overflow button, swiping gestures, more show information, backup/restore, double episode entries clean-up, faster updating, cover and fan art view, a modern launcher icon and it speeds up responsiveness significantly by (more) efficient SQL queries and some threading. Some pointers:</p>
+<p>This fork adds a quite a bunch of features, among which a menu overflow button, swiping gestures, more show information, backup/restore, double episode entries clean-up, faster updating, cover and fan art view, a modern launcher icon and it speeds up responsiveness significantly by (more) efficient SQL queries and some threading. Some pointers:</p>
 
 <ul>
 <li>Don't forget to update all shows regularly</li>
