--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 <a id="droidshows" class="anchor" href="#droidshows" aria-hidden="true"><span class="octicon octicon-link"></span></a>DroidShows<img src="https://github.com/ltGuillaume/DroidShows/raw/master/icon/icon5a.png" align="right">
 </h1>
 
-<p>This fork adds a quite a bunch of features, among which a menu overflow button, swiping gestures, more show information, backup/restore, double episode entries clean-up, faster updating, cover and fan art view, a modern launcher icon and it speeds up responsiveness significantly by (more) efficient SQL queries and some threading. Some pointers:</p>
+<p>This fork adds a quite a bunch of features, among which a menu overflow button, swiping gestures, more show information, backup/restore, double episode entries clean-up, faster updating, cover and fan art view, a modern launcher icon and it speeds up responsiveness significantly by (more) efficient SQL queries and some threading. 
+DroidShows can now be found in the <a href="https://f-droid.org/repository/browse/?fdfilter=droidshows&amp;fdid=nl.asymmetrics.droidshows">F-Droid Repository</a>.</p>
+
+<p>Some pointers:</p>
 
 <ul>
 <li>Don't forget to update all shows regularly</li>
