Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </h1>
 
 <p>This fork adds a quite a bunch of features, among which a menu overflow button, swiping gestures, more show information, backup/restore, double episode entries clean-up, faster updating, cover and fan art view, a modern launcher icon and it speeds up responsiveness significantly by (more) efficient SQL queries and some threading. 
-DroidShows can now be found in the <a href="https://f-droid.org/repository/browse/?fdfilter=droidshows&amp;fdid=nl.asymmetrics.droidshows">F-Droid Repository</a>.</p>
+DroidShows can now be found in the <a href="https://f-droid.org/repository/browse/?fdid=nl.asymmetrics.droidshows">F-Droid Repository</a>.</p>
 
 <p>Some pointers:</p>
 
@@ -46,7 +46,7 @@ DroidShows can now be found in the <a href="https://f-droid.org/repository/brows
 <p><a href="https://github.com/ltGuillaume/DroidShows/wiki">DroidShows Wiki (FAQ)</a><br>
 <a href="http://gallery.asymmetrics.nl/index.php?sfpg=RHJvaWRTZXJpZXMvKioxZTNiOGI1MjAwYzk0ZTE4OTVmZTRmYWIxOTBjNDAyYQ">Screenshots &amp; comparison with original DroidSeries</a><br>
 <a href="http://forum.xda-developers.com/showthread.php?p=58437755#post58437755">XDA Forum post (in original DroidSeries thread)</a><br>
-<strong>Download APK</strong>: from XDA forum post or <a href="https://github.com/ltGuillaume/DroidShows/tree/master/apk">here</a></p>
+<strong>Download APK</strong>: from XDA forum post, <a href="https://f-droid.org/repository/browse/?fdid=nl.asymmetrics.droidshows">F-Droid Repository</a> or <a href="https://github.com/ltGuillaume/DroidShows/tree/master/apk">here</a></p>
 
 <p><strong>Shows Overview</strong>:<br>
 + Showing "[aired unwatched] of [total unwatched]"<br>
